{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 26,
  "lineage": "d0b09d29-d5c7-fc4f-a399-3cf8083f1cc1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "3001",
                  "3000",
                  "9100",
                  "9090",
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-20T09:52:18.748-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proyecto-en-terraform/global/firewalls/allow-app-ports",
            "log_config": [],
            "name": "allow-app-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/global/networks/mi-vpc",
            "priority": 1000,
            "project": "proyecto-en-terraform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/global/firewalls/allow-app-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-20T09:52:18.749-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proyecto-en-terraform/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/global/networks/mi-vpc",
            "priority": 1000,
            "project": "proyecto-en-terraform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mi_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250615",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/zones/us-central1-c/disks/vm-docker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/proyecto-en-terraform/zones/us-central1-c/instances/vm-docker",
            "instance_id": "2132956044450082619",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "user-data": "#cloud-config\r\npackage_update: true\r\npackage_upgrade: true\r\npackages:\r\n  - docker.io\r\n  - git\r\nruncmd:\r\n  - curl -L \"https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\r\n  - chmod +x /usr/local/bin/docker-compose\r\n  - ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose || true\r\n  - systemctl start docker\r\n  - systemctl enable docker\r\n  - git clone https:// [...]
            },
            "metadata_fingerprint": "Ut_ogapbzWE=",
            "name": "vm-docker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.173.252.243",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/global/networks/mi-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/regions/us-central1/subnetworks/mi-subred",
                "subnetwork_project": "proyecto-en-terraform"
              }
            ],
            "project": "proyecto-en-terraform",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/zones/us-central1-c/instances/vm-docker",
            "service_account": [
              {
                "email": "159202691768-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app-server"
            ],
            "tags_fingerprint": "qR3e8nn2H8w=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.mi_vpc",
            "google_compute_subnetwork.mi_subred"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/proyecto-en-terraform/global/networks/mi-vpc",
            "mtu": 0,
            "name": "mi-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7737574184577412953",
            "project": "proyecto-en-terraform",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/global/networks/mi-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mi_subred",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-20T09:52:19.526-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/proyecto-en-terraform/regions/us-central1/subnetworks/mi-subred",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "mi-subred",
            "network": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/global/networks/mi-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "proyecto-en-terraform",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-en-terraform/regions/us-central1/subnetworks/mi-subred",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.mi_vpc"
          ]
        }
      ]
    }
  ]
}